# Aster

./: .gitignore  Cargo.toml  LICENSE  README.md  aster.rc  build.rs  debug_log.txt  git_diff.txt  install.ps1  install.sh  installer.iss
.github/workflows/: build-aster.yml  release.yml
extensions/todo/: list.innerHTML  manifest.json  popup.html  popup.js  sidepanel.html  sidepanel.js
src/: linux_app.rs  main.rs  platform.rs
wix/: License.rtf  main.wxs
