[package]
name = "aster"
version = "0.1.0"
authors = ["Google DeepMind <support@deepmind.com>"]
license = "MIT"
edition = "2021"
description = "A fast Chromium-based desktop browser with vertical tabs."

[[bin]]
name = "Aster"
path = "src/main.rs"

[dependencies]

[target.'cfg(windows)'.dependencies]
webview2-com = "0.36"
windows = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging"
] }

[target.'cfg(target_os = "linux")'.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tao = "0.35.2"
wry = "0.55.1"

[build-dependencies]

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2.4"
